@@ -1,3 +1,9 @@
+2004/02/04 20:19 (+0100) kaffeetisch
+
+	* gperl.h, Glib.xs: Add the new helper "object" GPerlArgv that
+	encapsulates everything related to argv parsing and thus
+	simplifies the various init xsubs.
+
 2004/02/04 02:33 (-0500) muppetman
 
 	* GBoxed.xs, GObject.xs, GType.xs: GType is not a guint, it's a
